# mpc_casadi

./: .gitignore  CMakeLists.txt  README.md  package.xml  rviz.rviz
launch/: tracking_nmpc.launch  tracking_nmpc_dk.launch  world_setup.launch
params/: constraints.yaml
plotting/: dis.npy  plot_box.py
result/plotting/: plot_tracking.py  yaw.npy
scripts/: jackal_joy_controller.py  mavros_joy_controller.py  mobile_joy_controller.py  odom_noise.py  scan2points.py  teleop.py
simulation_setup/: CMakeLists.txt  animated_box.cc  animated_box_h1.cc  animated_box_v1.cc
simulation_setup/drc_practice_blue_cylinder/: model-1_4.sdf  model.sdf
simulation_setup/drc_practice_blue_cylinder_h1/: model-1_4.sdf  model.config  model.sdf
simulation_setup/drc_practice_blue_cylinder_v1/: model-1_4.sdf  model.config  model.sdf
simulation_setup/dynamic_obstacles/: animated_box_map1_1.cc  animated_box_map1_2.cc  animated_box_map1_3.cc  animated_box_map2_1.cc  animated_box_map2_2.cc  animated_box_map2_3.cc
simulation_setup/dynamic_obstacles/blue_cylinder_map1_1/: model.config  model.sdf
simulation_setup/dynamic_obstacles/blue_cylinder_map1_2/: model.config  model.sdf
simulation_setup/dynamic_obstacles/blue_cylinder_map1_3/: model.config  model.sdf
simulation_setup/dynamic_obstacles/blue_cylinder_map2_1/: model.config  model.sdf
simulation_setup/dynamic_obstacles/blue_cylinder_map2_2/: model.config  model.sdf
simulation_setup/dynamic_obstacles/blue_cylinder_map2_3/: model.config  model.sdf
simulation_setup/robots/: turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle_up_scan.urdf.xacro
simulation_setup/robots/jackal/configs/: jackal_control.yaml
simulation_setup/robots/jackal/urdf/: accessories.urdf.xacro  jackal.gazebo  jackal.urdf.xacro
simulation_setup/robots/jackal/urdf/accessories/: bridge_plate.urdf.xacro  camera_mount.urdf.xacro  hokuyo_ust10.urdf.xacro  novatel_smart6.urdf.xacro  sick_lms1xx_mount.urdf.xacro  stereo_camera_mount.urdf.xacro
simulation_setup/robots/turtlebot3/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
simulation_setup/worlds/map1/: map.dae  map.world  map.yaml  map_dyn.world
simulation_setup/worlds/map2/: map.dae  map.world  map_dyn.world
simulation_setup/worlds/map3/: map.world  map_dyn.world
src/: collision_free.cpp  nmpc_controller.py  nmpc_node.py  nmpc_node_cleancode.py  odom.py  sfc.cpp  trajectory.py
worlds/map1/: map.dae
worlds/map3/: map.dae  map.world  map.yaml
